# raw-feldspar-mcs

./: .travis.yml  README.md  raw-feldspar-mcs.cabal
benchmarking/: #Benchmark.hs#  GenResults.hs  GenSamples.hs  bdiff.sh  build.sh  e-feldspar.h  epiphany-bandwidth.ods  gen_results  gen_results.c  gen_samples  gen_samples.c  pipe-benchmark.ods  run.sh  test.sh  testAll.sh  zbenchmark.h
benchmarking/ref_0_1024_1024/: core0.c  host.c
benchmarking/ref_0_1024_1024/Debug/: core0.elf  core0.srec  host.elf
benchmarking/ref_1_1024_1024/: core0.c  core1.c  host.c
benchmarking/ref_1_1024_1024/Debug/: core0.elf  core0.srec  core1.elf  core1.srec  host.elf
csrc/: feldspar-parallella.c
examples/: BulkPipes.hs  Channel.hs  Flags.hs  GeneralPipes.hs  Pipeline.hs  Pipes.hs  RingBuffers.hs  Shared.hs  Simple.hs  ZeldsparFFT.hs  ZeldsparSimple.hs  ZeldsparVector.hs
include/: e-feldspar.h  feldspar-parallella.h
src/Feldspar/: Multicore.hs
src/Feldspar/Multicore/: Channel.hs  Compile.hs  CoreId.hs  Frontend.hs  Pipe.hs  Reference.hs  Representation.hs  Semaphore.hs
src/Feldspar/Multicore/Channel/: Frontend.hs  Representation.hs
src/Feldspar/Multicore/Compile/: PThread.hs  Parallella.hs  Platform.hs
src/Feldspar/Multicore/Compile/Parallella/: Access.hs  Channel.hs  Core.hs  Esdk.hs  Host.hs  Imports.hs  Multicore.hs  State.hs  Util.hs
src/Zeldspar/: Multicore.hs
src/Zeldspar/Multicore/: Compile.hs  Frontend.hs  Representation.hs
tests/: Examples.hs  FFT_in8.txt
