name:                raw-feldspar-mcs
version:             0.1.0.0
synopsis:            Multi-Core & Scratchpad Support for Resource-Aware Feldspar
description:         see README.md
license:             BSD3
license-file:        LICENSE
-- author:              Máté Karácsony
maintainer:          k_mate@inf.elte.hu
copyright:           Copyright (c) 2016, Máté Karácsony
category:            Language
build-type:          Simple
cabal-version:       >=1.10

extra-source-files:  
    README.md
    examples/*.hs
    tests/*.hs

library
  exposed-modules:

  -- other-modules:
  -- other-extensions:    

  build-depends:
    base < 5,
    raw-feldspar >= 0.1,
    operational-alacarte

  default-language: Haskell2010

  hs-source-dirs: src

