name:                raw-feldspar-mcs
version:             0.1.0.0
synopsis:            Multi-Core & Scratchpad Support for Resource-Aware Feldspar
description:         see README.md
license:             BSD3
license-file:        LICENSE
-- author:              Máté Karácsony
maintainer:          k_mate@inf.elte.hu
copyright:           Copyright (c) 2016, Máté Karácsony
category:            Language
build-type:          Simple
cabal-version:       >=1.10

extra-source-files:  
    README.md
    examples/*.hs
    tests/*.hs

library
  exposed-modules:
    Feldspar.Multicore.Representation
    Feldspar.Multicore.Reference
    Feldspar.Multicore.Pipe
    Feldspar.Multicore.Frontend
    Feldspar.Multicore.Compile.Parallella
    Feldspar.Multicore.Channel
    Feldspar.Multicore
    Zeldspar.Multicore.Representation
    Zeldspar.Multicore.Compile
    Zeldspar.Multicore

  default-language: Haskell2010

  default-extensions:
    ConstraintKinds
    DeriveFunctor
    FlexibleContexts
    FlexibleInstances
    GADTs
    GeneralizedNewtypeDeriving
    KindSignatures
    MultiParamTypeClasses
--    PatternSynonyms
--    Rank2Types
    ScopedTypeVariables
    TypeFamilies
    TypeOperators
    ViewPatterns

  build-depends:
    array,
    base < 5,
    containers,
    language-c-quote >= 0.11 && < 0.12,
    mainland-pretty >= 0.4 && < 0.5,
    mtl,
    operational-alacarte,
    raw-feldspar >= 0.1,
    imperative-edsl >=0.4.1,
    zeldspar >= 0.2

  hs-source-dirs: src

test-suite Tests
  type: exitcode-stdio-1.0

  hs-source-dirs: tests examples

  main-is: Examples.hs

  default-language: Haskell2010

  default-extensions:
    ScopedTypeVariables

  build-depends:
    base,
    raw-feldspar-mcs

